@@ -1051,6 +1051,10 @@ void PreferencesDlg::slotSaveChanges()
         ttSettings->setValueOrClear(SETTINGS_TTS_ASSERTIVE, ui.ttsAssertiveChkBox->isChecked(), SETTINGS_TTS_ASSERTIVE_DEFAULT);
 #endif
         ttSettings->setValueOrClear(SETTINGS_TTS_OUTPUT_MODE, getCurrentItemData(ui.ttsOutputModeComboBox, ""), SETTINGS_TTS_OUTPUT_MODE_DEFAULT);
+#elif defined(Q_OS_DARWIN)
+#if QT_VERSION < QT_VERSION_CHECK(6,4,0) || QT_VERSION > QT_VERSION_CHECK(6,9,0)
+        ttSettings->setValueOrClear(SETTINGS_TTS_SPEAKLISTS, ui.ttsSpeakListsChkBox->isChecked(), SETTINGS_TTS_SPEAKLISTS_DEFAULT);
+#endif
 #endif
         ttSettings->setValue(SETTINGS_DISPLAY_TTSHEADER, ui.ttsTableView->horizontalHeader()->saveState());
         saveCurrentMessage();
@@ -1416,6 +1420,7 @@ void PreferencesDlg::slotUpdateTTSTab()
 
     ui.ttsForceSapiChkBox->hide();
     ui.ttsTrySapiChkBox->hide();
+    ui.ttsSpeakListsChkBox->hide();
     ui.ttsAssertiveChkBox->hide();
     ui.label_ttsoutputmode->hide();
     ui.ttsOutputModeComboBox->hide();
@@ -1433,6 +1438,11 @@ void PreferencesDlg::slotUpdateTTSTab()
         ui.ttsVoiceRateSpinBox->show();
         ui.label_ttsvoicevolume->show();
         ui.ttsVoiceVolumeSpinBox->show();
+#if defined(Q_OS_DARWIN)
+#if QT_VERSION < QT_VERSION_CHECK(6,4,0) || QT_VERSION > QT_VERSION_CHECK(6,9,0)
+        ui.ttsSpeakListsChkBox->show();
+#endif
+#endif
         delete ttSpeech;
         ttSpeech = new QTextToSpeech(this);
 
@@ -1452,7 +1462,11 @@ void PreferencesDlg::slotUpdateTTSTab()
         }
         ui.ttsVoiceComboBox->model()->sort(0);
         setCurrentItemData(ui.ttsVoiceComboBox, ttSettings->value(SETTINGS_TTS_VOICE));
-
+#if defined(Q_OS_DARWIN)
+#if QT_VERSION < QT_VERSION_CHECK(6,4,0) || QT_VERSION > QT_VERSION_CHECK(6,9,0)
+        ui.ttsSpeakListsChkBox->setChecked(ttSettings->value(SETTINGS_TTS_SPEAKLISTS, SETTINGS_TTS_SPEAKLISTS_DEFAULT).toBool());
+#endif
+#endif
 #endif /* QT_TEXTTOSPEECH_LIB */
     }
     break;
